--- a/TravelingColombia/Views/Shared/_Layout.cshtml
+++ b/TravelingColombia/Views/Shared/_Layout.cshtml
@@ -20,18 +20,19 @@
     <div class="relative">
 
         <!-- Botón de menú -->
-        <div class="navbar bg-base-100 shadow-sm">
+        <div class="navbar bg-[#2e86c1] shadow-sm h-40 ">
             <div class="navbar-start">
                 <div class="dropdown">
-                    <button id="menuButton" class="fixed top-4 left-4 z-50 rounded bg-black px-4 py-2 text-white">
+                    <button id="menuButton" class="fixed top-4 left-4 z-50 rounded bg-[#2e86c1] px-4 py-2 text-white">
                         ☰ Menú
                     </button>
                 </div>
             </div>
             <div class="navbar-center">
-                <a class="btn btn-ghost text-xl">daisyUI</a>
+                <a>
+                    <img class="w-30 h-30 rounded-full" src="https://res.cloudinary.com/dezff5yvd/image/upload/v1746645460/Traveling_colombia_emyqpp.png" alt="">
+                </a>
             </div>
-
         </div>
 
         <!-- Overlay -->
@@ -85,7 +86,6 @@
                         <div class="mr-10" >
                             <p class="font-bold text-sm">Alejandro <br>Soto López</p>
                         </div>
-                      
                         <i class="fa-solid fa-right-from-bracket cursor-pointer "></i>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
 
     <!-- Navbar inferior -->
     <nav id="bottomNavbar"
-        class="fixed right-0 bottom-0 left-0 z-40 ml-0 flex justify-around bg-gray-800 p-3 text-white shadow-inner transition-all duration-300">
+        class="fixed right-0 bottom-0 left-0 z-40 ml-0 flex justify-around bg-[#2e86c1] p-3 text-white shadow-inner transition-all duration-300">
         <a href="#" class="hover:text-yellow-300 ">Inicio</a>
         <a href="#" class="hover:text-yellow-300">Buscar</a>
         <a href="#" class="hover:text-yellow-300">Perfil</a>
