--- a/TravelingColombia/Views/Shared/_Layout.cshtml
+++ b/TravelingColombia/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body data-theme="light" class="relative overflow-hidden font-sans bg-white">
 
     <!--´parte inferior-->
     <div class="relative">
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="navbar-center">
-                <a>
+                <a asp-action="Index" asp-controller="Home">
                     <img class="w-30 h-30 rounded-full" src="https://res.cloudinary.com/dezff5yvd/image/upload/v1746645460/Traveling_colombia_emyqpp.png" alt="">
                 </a>
             </div>
@@ -60,8 +60,8 @@
                             <div class="cursor-pointer hover:text-white">Reservas</div>
                         </div>
                     </div>
-                    <div class="cursor-pointer rounded px-4 py-2 text-gray-300 hover:bg-[#1e293b] hover:text-white">
-                        Pagos
+                    <div  class="cursor-pointer rounded px-4 py-2 text-gray-300 hover:bg-[#1e293b] hover:text-white">
+                        <a asp-action="Pagos" asp-controller="Cliente">Pagos</a>
                     </div>
                     <button onclick="toggleAccordion('accountMenu')"
                         class="flex w-full items-center justify-between rounded px-4 py-2 hover:bg-[#1e293b]">
