--- a/TravelingColombia/Views/Shared/_Layout.cshtml
+++ b/TravelingColombia/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body data-theme="light" class="relative overflow-hidden font-sans bg-white">
+<body data-theme="light" class="bg-white">
 
     <!--´parte inferior-->
     <div class="relative">
