Correcciones de la vista Register

--- a/TravelingColombia/Views/Cliente/Register.cshtml
+++ b/TravelingColombia/Views/Cliente/Register.cshtml
@@ -1,62 +1,59 @@
-<!DOCTYPE html>
-<html lang="es">
+<body class="overflow-hidden">
+    <div class="border-1 border-black-500 h-[75vh] overflow-hidden relative bg-white">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Traveling Colombia</title>
-</head>
+        <div
+            class="bg-[#2E86C1] absolute top-[-28%] left-[18%] -translate-x-1/2 w-[900px] h-[900px] rounded-full border-2 border-black-500 shadow-2xl bg-gradient-to-br from-gray-300 via-blue-200 to-[#2E86C1] bg-opacity-100">
+        </div>
+        <div
+            class="bg-[#2E86C1] absolute top-[40%] right-[80%] w-[500px] h-[500px] rounded-full border-2 border-black-500 bg-gradient-to-br from-gray-300 via-blue-200 to-[#2E86C1] bg-opacity-100">
+        </div>
+        <div
+            class="bg-[#2E86C1] absolute top-[-25%] left-[15%] -translate-x-1/2 w-[800px] h-[800px] rounded-full border-2 border-black-500 shadow-2xl overflow-hidden bg-gradient-to-br from-gray-300 via-blue-200 to-[#2E86C1] bg-opacity-100">
+            <img src="https://imagenes.eltiempo.com/files/image_1200_535/uploads/2023/06/08/64821418dcfd5.jpeg"
+                alt="Familia subiendo al avión" class="absolute top-[23%] left-[16%] h-[620px] object-cover" />
+        </div>
 
-<body data-theme="light" class=" relative overflow-hidden font-sans bg-white">
-    <div
-        class="bg-[#2E86C1] absolute top-[300%] right-[79%] w-[500px] h-[500px] rounded-full border-2 border-black-500 bg-gradient-to-br from-gray-400 via-blue-200 to-blue-600 bg-opacity-100">
-    </div>
+        <div
+            class="bg-[#2E86C1] absolute top-[50%] right-[55%] w-[350px] h-[350px] flex items-center justify-center rounded-full border-2 border-black-500 shadow-lg bg-gradient-to-l from-[#2E86C1] via-blue-200 to-gray-300 bg-opacity-100">
+            <img src="https://res.cloudinary.com/dezff5yvd/image/upload/v1746645460/Traveling_colombia_emyqpp.png"
+                alt="Logo Traveling Colombia" class="w-[280px] rounded-full border-2 border-black-500" />
+        </div>
 
-    <div
-        class="bg-[#2E86C1] absolute top-[115%] left-[14%] -translate-x-1/2 w-[700px] h-[600px] rounded-full border-2 border-black-500 shadow-2xl bg-gradient-to-br from-gray-400 via-blue-200 to-blue-600 bg-opacity-100">
-    </div>
+        <div
+            class="bg-[#2E86C1] absolute top-[5%] right-[22%] w-[500px] p-11 rounded-3xl border-2 border-black-500 shadow-2xl bg-gradient-to-tr from-gray-300 via-blue-200 to-[#2E86C1] bg-opacity-100 z-10">
 
-    <div
-        class="bg-[#2E86C1] absolute top-[135%] left-[14%] -translate-x-1/2 w-[600px] h-[500px] rounded-full border-2 border-black-500 shadow-2xl overflow-hidden bg-gradient-to-br from-gray-400 via-blue-200 to-blue-600 bg-opacity-100">
-        <img src="https://imagenes.eltiempo.com/files/image_1200_535/uploads/2023/06/08/64821418dcfd5.jpeg"
-            alt="Familia subiendo al avión" class="w-full h-full object-cover" />
-    </div>
+            <h2 class="text-center text-5xl font-bold mb-4">Registro</h2>
+            <p class="text-center text-base text-gray-700 mb-6">Información personal:</p>
 
-    <div
-        class="bg-[#2E86C1] absolute top-[300%] right-[70%] w-[250px] h-[250px] flex items-center justify-center rounded-full border-2 border-black-500 shadow-lg bg-gradient-to-l from-blue-600 via-blue-200 to-gray-400 bg-opacity-100">
-        <img src="https://res.cloudinary.com/dezff5yvd/image/upload/v1746645460/Traveling_colombia_emyqpp.png"
-            alt="Logo Traveling Colombia" class="w-[200px] rounded-full border-2 border-black-500" />
-    </div>
+            <form class="space-y-4">
+                <input type="text" placeholder="Nombre" class="input input-bordered w-full" />
+                <input type="text" placeholder="Apellido" class="input input-bordered w-full" />
+                <input type="text" placeholder="Celular" class="input input-bordered w-full" />
+                <input type="email" placeholder="Email" class="input input-bordered w-full" />
+                <input type="password" placeholder="Contraseña" class="input input-bordered w-full" />
 
-    
+                <hr class="my-6" />
+
+                <button type="submit" class="bg-[#3e8ec4] hover:bg-[#245d83] btn w-full rounded-full text-white">
+                    Registrar
+                </button>
+            </form>
+        </div>
 
 
-    <div
-        class="bg-[#2E86C1] absolute top-[130%] right-[400px] w-[400px] p-8 rounded-3xl border-2 border-black-500 shadow-2xl bg-gradient-to-tr from-gray-400 via-blue-200 to-blue-600 bg-opacity-100 z-10">
-        <h2 class="text-center text-4xl font-bold mb-2">Registro</h2>
-        <p class="text-center text-sm text-gray-700 mb-4">Información personal:</p>
-        <form class="space-y-3">
-            <input type="text" placeholder="Nombre" class="input input-bordered w-full" />
-            <input type="text" placeholder="Apellido" class="input input-bordered w-full" />
-            <input type="text" placeholder="Celular" class="input input-bordered w-full" />
-            <input type="email" placeholder="Email" class="input input-bordered w-full" />
-            <input type="password" placeholder="Contraseña" class="input input-bordered w-full" />
-            <button type="submit" class="btn btn-info w-full rounded-full">Registrar</button>
-        </form>
-    </div>
+        <div
+            class="bg-[#2E86C1] absolute bottom-[-20%] left-[84%] w-[400px] h-[400px] rounded-full border-2 border-black-500 bg-gradient-to-t from-gray-300 via-blue-200 to-[#2E86C1]  bg-opacity-100">
+        </div>
 
-    <div
-        class="bg-[#2E86C1] absolute top-[350%] left-[84%] w-[400px] h-[400px] rounded-full border-2 border-black-500 bg-gradient-to-t from-blue-600 via-blue-200 to-gray-400 bg-opacity-100">
-    </div>
+        <div
+            class="bg-[#2E86C1] absolute bottom-[-10%] right-[-2%] w-[250px] h-[250px] flex items-center justify-center rounded-full border-2 border-black-500 shadow-lg bg-gradient-to-tl from-gray-300 via-blue-200 to-[#2E86C1] bg-opacity-100">
+        </div>
 
-    <div
-        class="bg-[#2E86C1] absolute top-[370%] -right-[1%] w-[250px] h-[250px] flex items-center justify-center rounded-full border-2 border-black-500 shadow-lg bg-gradient-to-tl from-blue-600 via-blue-200 to-gray-400 bg-opacity-100">
-    </div>
-
-    <div class="absolute top-[420%] right-[25%] text-sm text-gray-800">
-        TRAVELING COLOMBIA es la agencia de vuelos que te permite viajar por todo el mundo y hacer tus reservas de forma
-        rápida y segura.
+        <div class="absolute bottom-[5%] right-[20%] text-sm text-gray-800">
+            <b>TRAVELING COLOMBIA es la agencia de vuelos que te permite viajar por todo el mundo <br>
+                <center> y hacer tus reservas
+                    de forma rápida y segura.</center>
+            </b>
+        </div>
     </div>
 </body>
-
-</html>
