--- a/TravelingColombia/Views/Cliente/Perfil.cshtml
+++ b/TravelingColombia/Views/Cliente/Perfil.cshtml
@@ -8,9 +8,9 @@
         </div>
         <div class="bg-white rounded-full"><img class=" w-16 h-16 sm:w-20 sm:h-20 md:w-24 md:h-24  bg-center"
                 src="~/imagenes/logviajescolombia.png" alt=""></div>
-        <div><button class=" bg-white hover:bg-[#6a8ea7] cursor-pointer text-sm sm:text-base md:text-lg 
+        <div><a asp-action="Index" asp-controller="Home" class=" bg-white hover:bg-[#6a8ea7] cursor-pointer text-sm sm:text-base md:text-lg 
                w-24 sm:w-28 md:w-32 lg:w-40 
-               h-10 sm:h-12 md:h-14 rounded-full p-2 flex justify-center items-center">Atras</button></div>
+               h-10 sm:h-12 md:h-14 rounded-full p-2 flex justify-center items-center">Atras</a></div>
     </div>
 
     <div class="w-full  rounded-2xl mt-4 h-[650px] flex">
