cambios del logos vistas de gestiones

--- a/TravelingColombia/Views/Pago/Index.cshtml
+++ b/TravelingColombia/Views/Pago/Index.cshtml
@@ -1,7 +1,7 @@
 <div class="min-h-screen bg-gradient-to-b  flex flex-col items-center p-6 space-y-6">
     <!-- Botones superiores -->
     <div
-        class="flex w-full justify-evenly items-center bg-[#3085BC]  rounded-xl shadow-lg p-4 flex-nowrap overflow-x-auto gap-2">
+        class="flex w-full justify-between items-center bg-[#3085BC]  rounded-xl shadow-lg p-4 px-16 flex-nowrap overflow-x-auto gap-2">
 
         <button id="btn-Lista" onclick="mostrarApartado('Lista')" class="text-black cursor-pointer bg-[#6ca7cf]  px-2 py-1 rounded-full 
                text-sm sm:text-base md:text-lg 
@@ -10,10 +10,6 @@
             Lista
         </button>
 
-
-        <div class="w-16 h-16 sm:w-20 sm:h-20 md:w-24 md:h-24 bg-white rounded-full">
-            <img src="~/imagenes/logviajescolombia.png" class="w-full h-full bg-center " alt="">
-        </div>
 
         <button id="btn-Crear" onclick="mostrarApartado('Crear')" class="text-black cursor-pointer bg-white font-semibold px-2 py-1 rounded-full 
                text-sm sm:text-base md:text-lg 
